--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,56 @@
+:root {
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  color-scheme: light dark;
+  color: #C5CBD3;
+  background-color: #7072a8;
+}
+
 #root {
-  max-width: 1280px;
+  max-width: 1390px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+.contenedor {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.vista {
+  width: 7cm;
+  height: 8cm;
+  background-color: #6f8465;
+  color: #C5CBD3;
+  border-radius: 8px;
+  overflow: hidden;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.6rem;
+  transition: background-color 0.3s;
+}
+
+.vista:hover {
+  background-color: #8B635C;
+}
+
+.vista img {
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
+}
+
+.vista span {
+  padding: 2px 4px;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 100%;
 }
 
 .logo {
@@ -11,9 +59,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
