--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,49 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-content {
+  background-color: rgb(116, 131, 142);
+  padding: 30px;
+  border-radius: 15px;
+  width: 500px;
+  text-align: left;
+  position: relative;
+  overflow-y: auto;
+}
+
+.popup-image img {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  cursor: pointer;
+  align-self: center;
+}
+
+.close-btn:hover {
+  color: #f00;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
